@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.5.5[/B][/COLOR]
+* Wizard auto update - Change dialog progress to BG for smoother wizard update.
 [COLOR yellow][B]v1.5.4[/B][/COLOR]
 * BUG FIX: First build launch notification doesn't show after installing on existing build.
 [COLOR yellow][B]v1.5.3[/B][/COLOR]
